--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">9 methods,   9 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,47 +103,22 @@
                     <div class="method-list-content passed suite-Default_Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_Suite" title="SelectorsTest" class="method navigator-link" hash-for-method="byClass">byClass</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_Suite" title="TestNG.TestNGReportExample.ReportExample" class="method navigator-link" hash-for-method="testMethod1">testMethod1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_Suite" title="SelectorsTest" class="method navigator-link" hash-for-method="byCssSelector">byCssSelector</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_Suite" title="TestNG.TestNGReportExample.ReportExample" class="method navigator-link" hash-for-method="testMethod2">testMethod2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_Suite" title="SelectorsTest" class="method navigator-link" hash-for-method="byCssSelector_2">byCssSelector_2</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_Suite" title="TestNG.TestNGReportExample.ReportExample" class="method navigator-link" hash-for-method="testMethod3">testMethod3</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_Suite" title="SelectorsTest" class="method navigator-link" hash-for-method="byId">byId</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_Suite" title="SelectorsTest" class="method navigator-link" hash-for-method="byLinkText">byLinkText</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_Suite" title="SelectorsTest" class="method navigator-link" hash-for-method="byPartialLinkText">byPartialLinkText</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_Suite" title="SelectorsTest" class="method navigator-link" hash-for-method="byTagName">byTagName</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_Suite" title="SelectorsTest" class="method navigator-link" hash-for-method="byXpath">byXpath</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_Suite" title="SelectorsTest" class="method navigator-link" hash-for-method="byXpath_2">byXpath_2</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_Suite" title="TestNG.TestNGReportExample.ReportExample" class="method navigator-link" hash-for-method="testMethod4">testMethod4</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_Suite -->
@@ -161,70 +136,35 @@
           <div class="suite-Default_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">SelectorsTest</span>
+              <span class="class-name">TestNG.TestNGReportExample.ReportExample</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="byClass">
-                  </a> <!-- byClass -->
-                  <span class="method-name">byClass</span>
+                  <a name="testMethod1">
+                  </a> <!-- testMethod1 -->
+                  <span class="method-name">testMethod1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="byCssSelector">
-                  </a> <!-- byCssSelector -->
-                  <span class="method-name">byCssSelector</span>
+                  <a name="testMethod2">
+                  </a> <!-- testMethod2 -->
+                  <span class="method-name">testMethod2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="byCssSelector_2">
-                  </a> <!-- byCssSelector_2 -->
-                  <span class="method-name">byCssSelector_2</span>
+                  <a name="testMethod3">
+                  </a> <!-- testMethod3 -->
+                  <span class="method-name">testMethod3</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="byId">
-                  </a> <!-- byId -->
-                  <span class="method-name">byId</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="byLinkText">
-                  </a> <!-- byLinkText -->
-                  <span class="method-name">byLinkText</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="byPartialLinkText">
-                  </a> <!-- byPartialLinkText -->
-                  <span class="method-name">byPartialLinkText</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="byTagName">
-                  </a> <!-- byTagName -->
-                  <span class="method-name">byTagName</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="byXpath">
-                  </a> <!-- byXpath -->
-                  <span class="method-name">byXpath</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="byXpath_2">
-                  </a> <!-- byXpath_2 -->
-                  <span class="method-name">byXpath_2</span>
+                  <a name="testMethod4">
+                  </a> <!-- testMethod4 -->
+                  <span class="method-name">testMethod4</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -239,11 +179,11 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Default Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Selenium_Pluralsight&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Selenium&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;SelectorsTest&quot;/&gt;
+      &lt;class name=&quot;TestNG.TestNGReportExample.ReportExample&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Selenium_Pluralsight --&gt;
+  &lt;/test&gt; &lt;!-- Selenium --&gt;
 &lt;/suite&gt; &lt;!-- Default Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -255,7 +195,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Selenium_Pluralsight (1 class)</span>
+                <span class="test-name">Selenium (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -281,48 +221,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(9);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'byCssSelector_2')
-data.setCell(0, 2, 'SelectorsTest')
-data.setCell(0, 3, 5451);
+data.setCell(0, 1, 'testMethod1')
+data.setCell(0, 2, 'TestNG.TestNGReportExample.ReportExample')
+data.setCell(0, 3, 35);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'byCssSelector')
-data.setCell(1, 2, 'SelectorsTest')
-data.setCell(1, 3, 5335);
+data.setCell(1, 1, 'testMethod2')
+data.setCell(1, 2, 'TestNG.TestNGReportExample.ReportExample')
+data.setCell(1, 3, 11);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'byClass')
-data.setCell(2, 2, 'SelectorsTest')
-data.setCell(2, 3, 1907);
+data.setCell(2, 1, 'testMethod3')
+data.setCell(2, 2, 'TestNG.TestNGReportExample.ReportExample')
+data.setCell(2, 3, 4);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'byXpath')
-data.setCell(3, 2, 'SelectorsTest')
-data.setCell(3, 3, 1421);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'byXpath_2')
-data.setCell(4, 2, 'SelectorsTest')
-data.setCell(4, 3, 1409);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'byTagName')
-data.setCell(5, 2, 'SelectorsTest')
-data.setCell(5, 3, 1399);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'byLinkText')
-data.setCell(6, 2, 'SelectorsTest')
-data.setCell(6, 3, 1362);
-data.setCell(7, 0, 7)
-data.setCell(7, 1, 'byId')
-data.setCell(7, 2, 'SelectorsTest')
-data.setCell(7, 3, 1355);
-data.setCell(8, 0, 8)
-data.setCell(8, 1, 'byPartialLinkText')
-data.setCell(8, 2, 'SelectorsTest')
-data.setCell(8, 3, 1336);
+data.setCell(3, 1, 'testMethod4')
+data.setCell(3, 2, 'TestNG.TestNGReportExample.ReportExample')
+data.setCell(3, 3, 3);
 window.suiteTableData['Default_Suite']= { tableData: data, tableDiv: 'times-div-Default_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 20 seconds</span>
+              <span class="suite-total-time">Total running time: 53 ms</span>
               <div id="times-div-Default_Suite">
               </div> <!-- times-div-Default_Suite -->
             </div> <!-- times-div -->
@@ -348,79 +268,23 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">SelectorsTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">TestNG.TestNGReportExample.ReportExample</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">byClass</span>
+                <span class="method-name">testMethod1</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">cleanUp</span>
-                <span class="method-start">1907 ms</span>
-              </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">byCssSelector</span>
-                <span class="method-start">2097 ms</span>
+                <span class="method-name">testMethod2</span>
+                <span class="method-start">54 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">cleanUp</span>
-                <span class="method-start">7433 ms</span>
-              </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">byCssSelector_2</span>
-                <span class="method-start">7589 ms</span>
+                <span class="method-name">testMethod3</span>
+                <span class="method-start">73 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">cleanUp</span>
-                <span class="method-start">13040 ms</span>
-              </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">byId</span>
-                <span class="method-start">13207 ms</span>
+                <span class="method-name">testMethod4</span>
+                <span class="method-start">84 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">cleanUp</span>
-                <span class="method-start">14562 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">byLinkText</span>
-                <span class="method-start">14699 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">cleanUp</span>
-                <span class="method-start">16061 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">byPartialLinkText</span>
-                <span class="method-start">16219 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">cleanUp</span>
-                <span class="method-start">17555 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">byTagName</span>
-                <span class="method-start">17689 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">cleanUp</span>
-                <span class="method-start">19089 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">byXpath</span>
-                <span class="method-start">19235 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">cleanUp</span>
-                <span class="method-start">20657 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">byXpath_2</span>
-                <span class="method-start">20814 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">cleanUp</span>
-                <span class="method-start">22224 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
